Included js-open-modal

--- a/src/_include/device-block.html
+++ b/src/_include/device-block.html
@@ -1,6 +1,6 @@
 <div class="device-slider slider slider--overflow js-device-slider">
   <div class="slider__inner">
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
@@ -12,7 +12,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="temperature">
       <div class="tuning-block__icon status-icon status-icon--temperature">
       </div>
       <div class="tuning-block__content">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
@@ -48,7 +48,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
@@ -72,7 +72,7 @@
         </div>
       </div>
     </div>
-    <div class="slider__item tuning-block">
+    <div class="slider__item tuning-block js-open-modal" data-modal-type="lighting">
       <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
