--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -2,17 +2,17 @@
   <div class="slider__inner">
     <div class="slider__page">
       <div class="slider__item ">
-        <div class="tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon status-icon--sun">
-        </div>
-        <div class="tuning-block__content">
-          <div class="tuning-block__title">
-            Выключить весь свет в&nbsp;доме и&nbsp;во&nbsp;дворе
+        <div class="tuning-block tuning-block--less-height js-open-modal" data-modal-type="temperature">
+          <div class="tuning-block__icon status-icon status-icon--sun">
+          </div>
+          <div class="tuning-block__content">
+            <div class="tuning-block__title">
+              Выключить весь свет в&nbsp;доме и&nbsp;во&nbsp;дворе
+            </div>
           </div>
         </div>
-        </div>
       </div>
-      <div class="slider__item tuning-block tuning-block--less-height">
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="round">
         <div class="tuning-block__icon status-icon status-icon--scheduled">
         </div>
         <div class="tuning-block__content">
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <div class="slider__item tuning-block tuning-block--less-height">
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="lighting">
         <div class="tuning-block__icon status-icon status-icon--sun">
         </div>
         <div class="tuning-block__content">
@@ -30,7 +30,7 @@
           </div>
         </div>
       </div>
-      <div class="slider__item tuning-block tuning-block--less-height">
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="lighting">
         <div class="tuning-block__icon status-icon--temperature">
         </div>
         <div class="tuning-block__content">
@@ -42,7 +42,7 @@
           </div>
         </div>
       </div>
-      <div class="slider__item tuning-block tuning-block--less-height">
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="lighting">
         <div class="tuning-block__icon status-icon--temperature">
         </div>
         <div class="tuning-block__content">
@@ -51,19 +51,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="slider__page">
-      <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon--temperature">
-
-        </div>
-        <div class="tuning-block__content">
-          <div class="tuning-block__title">
-            Сделать пол теплым во&nbsp;всей квартире
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
 </div>
