Fixed touch slider

--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -1,14 +1,12 @@
 <div class="script-slider slider slider--overflow slider--page js-script-slider">
   <div class="slider__inner">
     <div class="slider__page">
-      <div class="slider__item ">
-        <div class="tuning-block tuning-block--less-height js-open-modal" data-modal-type="temperature">
-          <div class="tuning-block__icon status-icon status-icon--sun">
-          </div>
-          <div class="tuning-block__content">
-            <div class="tuning-block__title">
-              Выключить весь свет в&nbsp;доме и&nbsp;во&nbsp;дворе
-            </div>
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="temperature">
+        <div class="tuning-block__icon status-icon status-icon--sun">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Выключить весь свет в&nbsp;доме и&nbsp;во&nbsp;дворе
           </div>
         </div>
       </div>
@@ -42,6 +40,17 @@
           </div>
         </div>
       </div>
+      <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="lighting">
+        <div class="tuning-block__icon status-icon--temperature">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Сделать пол тёплым во всей квартире
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slider__page">
       <div class="slider__item tuning-block tuning-block--less-height js-open-modal" data-modal-type="lighting">
         <div class="tuning-block__icon status-icon--temperature">
         </div>
