Added docs for gitpages

--- a/src/_include/popup.html
+++ b/src/_include/popup.html
@@ -75,14 +75,14 @@
       <div class="popup__range range__wr">
         <div class="range__caption range__caption--icon range__caption--left">
           <picture>
-              <source type="image/svg+xml" srcset="/images/icon_sun_min.svg">
-              <img src="/images/icon_sun_min.png" srcset="/images/icon_sun_min@2x.png 2x" alt="min">
+              <source type="image/svg+xml" srcset="images/icon_sun_min.svg">
+              <img src="images/icon_sun_min.png" srcset="images/icon_sun_min@2x.png 2x" alt="min">
           </picture>
         </div>
         <div class="range__caption range__caption--icon range__caption--right">
           <picture>
-              <source type="image/svg+xml" srcset="/images/icon_sun_max.svg">
-              <img src="/images/icon_sun_max.png" srcset="/images/icon_sun_max@2x.png 2x" alt="max">
+              <source type="image/svg+xml" srcset="images/icon_sun_max.svg">
+              <img src="images/icon_sun_max.png" srcset="images/icon_sun_max@2x.png 2x" alt="max">
           </picture>
         </div>
         <input class="range range--lighting js-range-lighting" type="range" min="0" max="10">
