--- a/src/style/partials/circularSlider.scss
+++ b/src/style/partials/circularSlider.scss
@@ -73,7 +73,7 @@
     position: absolute;
     top: 50%;
     left: 22px;
-    background-image: svg-load('../images/img_to_bg/icon_arrow.svg');
+    background-image: svg-load('/images/img_to_bg/icon_arrow.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
