--- a/src/style/partials/filters.scss
+++ b/src/style/partials/filters.scss
@@ -50,7 +50,7 @@
     right: 16px;
     width: 10px;
     height: 10px;
-    background-image: svg-load('../images/img_to_bg/down-arrow.svg', fill=$black);
+    background-image: svg-load('/images/img_to_bg/down-arrow.svg', fill=$black);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
