--- a/src/_include/header.html
+++ b/src/_include/header.html
@@ -4,8 +4,8 @@
       <div class="header__logo logo">
         <a class="link link--absolute" href="#"></a>
         <picture class="logo__img">
-            <source type="image/svg+xml" srcset="/images/logo.svg">
-            <img src="/images/logo.png" srcset="/images/logo@2x.png 2x" alt="logo">
+            <source type="image/svg+xml" srcset="images/logo.svg">
+            <img src="images/logo.png" srcset="images/logo@2x.png 2x" alt="logo">
         </picture>
       </div>
       <div class="header__menu header-menu">
