--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -23,8 +23,8 @@
           </div>
           <div class="weather__picture">
             <picture class="logo__img">
-                <source type="image/svg+xml" srcset="/images/cloud-drizzle.svg">
-                <img src="/images/cloud-drizzle.png" srcset="/images/cloud-drizzle@2x.png 2x" alt="wheater">
+                <source type="image/svg+xml" srcset="images/cloud-drizzle.svg">
+                <img src="images/cloud-drizzle.png" srcset="images/cloud-drizzle@2x.png 2x" alt="wheater">
             </picture>
           </div>
         </div>
